--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ on:
 jobs:    
   build_and_deploy:
     name: Build and deploy
-    runs-on: macos-11
+    runs-on: macos-latest
     outputs:
       github_sha: ${{github.sha}}
       event_before: ${{ github.event.before }}
