--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,10 +32,10 @@ jobs:
       - name: Generate Symbol Graphs
         run: |
           mkdir -p .build/symbol-graphs && \
-          swift build \
-            -Xswiftc -emit-symbol-graph \
-            -Xswiftc -emit-symbol-graph-dir -Xswiftc .build/symbol-graphs \
-            -Xswiftc "-sdk" -Xswiftc "`xcrun --sdk iphonesimulator --show-sdk-path`" -Xswiftc "-target" -Xswiftc "x86_64-apple-ios15.0-simulator"
+          xcodebuild \
+          -scheme "IBM Security Verify-Package" \
+          -destination "OS=18.2,name=iPhone 16 Pro" \
+          -derivedDataPath ".build/symbol-graphs"
       - name: Generate docc
         run: |
           cd swift-docc
