--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,30 +34,32 @@ jobs:
           xcode-version: '16.0.0'
       - name: Generate Symbol Graphs
         run: |
+          SYMBOL_GRAPHS_DIR=../.build/symbol-graphs
+          DERIVED_DATA_DIR=../.build/derived-data
+          
           mkdir -p .build/symbol-graphs && \
           xcodebuild docbuild \
           -scheme "IBM Security Verify-Package" \
           -destination "generic/platform=iOS" \
-          -derivedDataPath ".build/symbol-graphs" \
+          -derivedDataPath $DERIVED_DATA_DIR \
           DOCC_HOSTING_BASE_PATH='/ios'
       - name: Generate docc
         run: |
           cd swift-docc
           swift build
 
-          mkdir ../.build/iOS-SDK.docc
+          DOCC_SOURCE_DIR=../.build/iOS-SDK.docc
+          mkdir $DOCC_SOURCE_DIR
 
           git clone https://github.com/apple/swift-docc-render-artifact.git
           
-          export DOCC_HTML_DIR="/Users/runner/work/verify-sdk-ios/verify-sdk-ios/swift-docc/swift-docc-render-artifact/dist"
-
-          xcrun docc convert ../.build/iOS-SDK.docc \
+          xcrun docc convert $DOCC_SOURCE_DIR \
             --fallback-display-name iOS-SDK \
             --fallback-bundle-identifier com.ibm.iOS-SDK \
             --fallback-bundle-version 1.0.0 \
-            --additional-symbol-graph-dir ../.build/symbol-graphs
+            --additional-symbol-graph-dir $SYMBOL_GRAPHS_DIR
 
-          xcrun docc process-archive transform-for-static-hosting --hosting-base-path ios/ ../.build/iOS-SDK.docc/.docc-build
+          xcrun docc process-archive transform-for-static-hosting --hosting-base-path ios/ $DOCC_SOURCE_DIR/.docc-build
 
       - name: Push to I/O repo
         run: |
