--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,10 +43,12 @@ jobs:
           -destination "generic/platform=iOS" \
           -derivedDataPath $DERIVED_DATA_DIR
           
-          cp -r ${DERIVED_DATA_DIR}/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ ${SYMBOL_GRAPHS_DIR} 
-          
       - name: Generate docc
         run: |
+          cp -r ${DERIVED_DATA_DIR}/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ ${SYMBOL_GRAPHS_DIR} 
+          echo '## Copy .docarchives'
+          find "${SYMBOL_GRAPHS_DIR}" -type d -name '*.json'
+        
           cd swift-docc
           swift build
 
