--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,9 +45,9 @@ jobs:
           
       - name: Generate docc
         run: |
-          cp -r ${DERIVED_DATA_DIR}/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ ${SYMBOL_GRAPHS_DIR} 
+          cp -r $DERIVED_DATA_DIR/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ $SYMBOL_GRAPHS_DIR 
           echo '## Copy .docarchives'
-          find "${SYMBOL_GRAPHS_DIR}" -type d -name '*.json'
+          find $SYMBOL_GRAPHS_DIR -type d -name '*.json'
         
           cd swift-docc
           swift build
