--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,7 @@ jobs:
           
       - name: Generate docc
         run: |
-          cp -r $DERIVED_DATA_DIR/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ $SYMBOL_GRAPHS_DIR 
+          cp -r ../.build/derived-data/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ ../.build/symbol-graphs
           echo '## Copy .docarchives'
           find $SYMBOL_GRAPHS_DIR -type d -name '*.json'
         
