--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,15 +19,9 @@ jobs:
       event_before: ${{ github.event.before }}
     steps:
       - name: Git checkout
-        uses: actions/checkout@v2
-      - uses: swift-actions/setup-swift@v1
-        with:
-          swift-version: "5.9"
-      - name: Checkout swift-docc repo
-        uses: actions/checkout@v2
-        with:
-          repository: apple/swift-docc
-          path: swift-docc
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
       - name: Select Xcode 16.0
         uses: maxim-lobanov/setup-xcode@v1
         with:
@@ -47,23 +41,23 @@ jobs:
         run: |
           cp -r ../.build/derived-data/Build/Intermediates.noindex/*.build/Debug-iphoneos/*.build/symbol-graph/ ../.build/symbol-graphs
           echo '## Copy .docarchives'
-          find ../.build/symbol-graphs -type d -name '*.json'
+          find ../.build/symbol-graphs -type d -name '*.json' | echo {}
         
           cd swift-docc
           swift build
 
           DOCC_SOURCE_DIR=../.build/iOS-SDK.docc
           mkdir $DOCC_SOURCE_DIR
-
-          git clone https://github.com/apple/swift-docc-render-artifact.git
-          
-          xcrun docc convert $DOCC_SOURCE_DIR \
+ 
+          $(xcrun --find docc) convert $DOCC_SOURCE_DIR \
             --fallback-display-name iOS-SDK \
             --fallback-bundle-identifier com.ibm.iOS-SDK \
             --fallback-bundle-version 1.0.0 \
             --additional-symbol-graph-dir $SYMBOL_GRAPHS_DIR
 
-          xcrun docc process-archive transform-for-static-hosting --hosting-base-path ios/ $DOCC_SOURCE_DIR/.docc-build
+          $(xcrun --find docc) process-archive transform-for-static-hosting \
+            $DOCC_SOURCE_DIR/.docc-build \
+            --hosting-base-path ios/ 
 
       - name: Push to I/O repo
         run: |
