--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,7 @@ jobs:
             --additional-symbol-graph-dir $SYMBOL_GRAPHS_DIR
 
           echo '## Processing archive'
-          xcrun docc process-archive transform-for-static-hosting --hosting-base-path ios/ $DOCC_SOURCE_DIR/.docc-build
+          #xcrun docc process-archive transform-for-static-hosting --hosting-base-path ios/ $DOCC_SOURCE_DIR/.docc-build
 
       - name: Push to I/O repo
         run: |
