--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,8 @@ jobs:
           SYMBOL_GRAPHS_DIR=../.build/symbol-graphs
           DERIVED_DATA_DIR=../.build/derived-data
           
+          swift package resolve
+          
           mkdir -p $SYMBOL_GRAPHS_DIR && \
           xcodebuild docbuild \
           -scheme "IBM Security Verify-Package" \
@@ -50,9 +52,6 @@ jobs:
           
       - name: Generating single docarchive
         run: |
-          cd swift-docc
-          swift build
-
           DOCC_SOURCE_DIR=../.build/iOS-SDK.docc
           mkdir $DOCC_SOURCE_DIR
 
@@ -60,12 +59,13 @@ jobs:
           export DOCC_HTML_DIR="/Users/runner/work/verify-sdk-ios/verify-sdk-ios/swift-docc/swift-docc-render-artifact/dist"
           
           echo '## Converting docc'
-          xcrun docc convert $DOCC_SOURCE_DIR \
+          $(xcrun --find docc) convert $DOCC_SOURCE_DIR \
             --fallback-display-name iOS-SDK \
             --fallback-bundle-identifier com.ibm.verify-ios-sdk \
             --fallback-bundle-version 1.0.0 \
             --additional-symbol-graph-dir $SYMBOL_GRAPHS_DIR
-
+            
+         
       - name: Push to I/O repo
         run: |
           git clone https://github.com/ibm-security-verify/ibm-security-verify.github.io.git
