--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,7 +55,7 @@ jobs:
           mkdir -p $DOCC_SOURCE_DIR
 
           git clone https://github.com/apple/swift-docc-render-artifact.git
-          export DOCC_HTML_DIR="$(dirname $(xcrun --find docc))/../share/docc/render"
+          export DOCC_HTML_DIR=$(dirname $(xcrun --find docc))/../share/docc/render
                       
           $(xcrun --find docc) convert ../$DOCC_SOURCE_DIR \
             --fallback-display-name "IBM Security Verify iOS SDK" \
