--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,12 +63,8 @@ jobs:
             --fallback-bundle-version 1.0.0 \
             --additional-symbol-graph-dir ../$SYMBOL_GRAPHS_DIR
         
-      - name: Generating Documentation
-        run: |
-          $(xcrun --find docc) process-archive transform-for-static-hosting --hosting-base-path ios/ ../$DOCC_SOURCE_DIR/.docc-build
-
          
-      - name: Push to I/O repo
+      - name: Push Github Pages
         run: |
           git clone https://github.com/ibm-security-verify/ibm-security-verify.github.io.git
           cd ibm-security-verify.github.io
